# equity-intel-mcp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  ETRADE_AUTH_SETUP.md  Financial markdown.txt  README.md  VALIDATION_REPORT.md  alembic.ini  alpaca_trader.py  bias_layer.example.json  check_alpaca.py  check_positions.py  check_quote.py  check_rebalance_dry.py  conftest.py  etrade_auth.py  find_filter.py  find_filter2.py  find_filter3.py  fix_lock.py  gemini_news.py  news_sync_last_run.txt  patch_portfolio.py  project.json  push_301_fix.py  push_cleanup_news.py  push_etf_fix.py  push_pipeline_fix.py  push_quality_pass.py  push_synthesize_fix.py  push_window_fix.py  pyproject.toml  run.bat  send_probe_alert.py  setup_probe_alert_task.ps1  synthesize.py  test_alpaca.py  test_etrade.py  test_kraken.py  (+3 more)
briefs/: brief_20260529.md  brief_20260530.md  brief_20260601.md  brief_20260602.md  brief_20260603.md  brief_20260604.md  brief_20260609.md  brief_20260610.json  brief_20260610.md  brief_20260611.json
cloudflare-pages-site/: README.md  app.js  config.example.js  config.js  index.html  styles.css  workflow.json
config/: ai_tickers.json  manager_watchlist.json
debug/: before_submit_20260523_163142.html  before_submit_20260523_163245.html  before_submit_20260523_163416.html  before_submit_20260523_163541.html  before_submit_20260523_163702.html  before_submit_20260523_163816.html  before_submit_20260523_164120.html  before_submit_20260523_171157.html  before_submit_20260524_074005.html  before_submit_20260525_050653.html  before_submit_20260525_060150.html  before_submit_20260526_060144.html  before_submit_20260527_060216.html  before_submit_20260607_052020.html  before_submit_20260608_185159.html  before_submit_20260611_185648.html  verifier_page_20260523_163314.html  verifier_page_20260523_163450.html  verifier_page_20260523_163617.html  verifier_page_20260523_163737.html  verifier_page_20260523_163853.html  (+10 more)
(+229 files in other folders)
