[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "equity-intel"
version = "0.1.0"
description = "Equity intelligence pipeline with SEC EDGAR ingestion and MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
    "tenacity>=8.3",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "html2text>=2024.2",
    "python-dotenv>=1.0",
    "mcp>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "anyio>=4.4",
    "click>=8.1",
    "structlog>=24.2",
    "aiofiles>=23.2",
    "diskcache>=5.6",
    "flask>=3.0",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "coverage>=7.5",
]

[project.scripts]
equity-sync-companies = "equity_intel.workers.sync_companies:main"
equity-sync-filings = "equity_intel.workers.sync_filings:main"
equity-sync-facts = "equity_intel.workers.sync_facts:main"
equity-sync-docs = "equity_intel.workers.sync_documents:main"
equity-sync-news = "equity_intel.workers.sync_news:main"
equity-sync-prices = "equity_intel.workers.sync_prices:main"
equity-build-events = "equity_intel.workers.build_events:main"
equity-cluster-events = "equity_intel.workers.cluster_events:main"
equity-generate-watchlist-brief = "equity_intel.workers.generate_watchlist_brief:main"
equity-run-daily-brief = "equity_intel.workers.run_daily_brief:main"
equity-mcp = "equity_intel.mcp_server.server:main"
equity-dashboard = "equity_intel.dashboard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/equity_intel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
